@startuml MembershipStateDiagram
title Membership lifecycle -- State Diagram

[*] --> PENDING

PENDING --> ACTIVE    : activate
PENDING --> CANCELLED : cancel

ACTIVE --> EXPIRING  : grace window starts
ACTIVE --> FROZEN    : freeze
ACTIVE --> CANCELLED : cancel

EXPIRING --> ACTIVE    : renew
EXPIRING --> EXPIRED   : lapse
EXPIRING --> CANCELLED : cancel

FROZEN --> ACTIVE    : resume
FROZEN --> CANCELLED : cancel

EXPIRED   --> [*]
CANCELLED --> [*]

note right of EXPIRED   : terminal\nstate
note left  of CANCELLED : terminal\nstate
note bottom of FROZEN   : resume\npushes renewal\ndate forward

@enduml
